fixed processing aggregate functions with static tables (BUG#1318)